--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
       right: 5%;
       width: 12vmin;
       height: 12vmin;
+      width: 100px;
+  height: 100px;
+  background-color: yellow;
+  border-radius: 50%;
+  box-shadow: -30px 0 0 0 white;
       background: pink;
       border-radius: 50%;
       clip-path: circle(40% at 30% 30%);
@@ -98,23 +103,26 @@
     }
 
     .message-btn {
-      position: absolute;
-      bottom: 20px;
-      padding: 12px 24px;
-      background: #ff69b4;
-      color: #fff;
-      border: none;
-      border-radius: 30px;
-      font-size: 1.1em;
-      cursor: pointer;
-      box-shadow: 0px 4px 10px rgba(255, 105, 180, 0.7);
-      transition: transform 0.3s, box-shadow 0.3s;
-    }
+  position: absolute;
+  bottom: 46px;
+  padding: 12px 24px;
+  background: linear-gradient(135deg, #ff6ec7, #ff69b4);
+  color: #fff;
+  border: none;
+  border-radius: 30px;
+  font-size: 1.1em;
+  cursor: pointer;
+  box-shadow: 0px 6px 15px rgba(255, 105, 180, 0.6);
+  transition: transform 0.4s, box-shadow 0.4s, background 0.4s;
+  text-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+}
 
-    .message-btn:hover {
-      transform: scale(1.1);
-      box-shadow: 0px 6px 15px rgba(255, 105, 180, 0.9);
-    }
+.message-btn:hover {
+  transform: scale(1.15) rotate(3deg);
+  box-shadow: 0px 10px 25px rgba(255, 105, 180, 0.8);
+  background: linear-gradient(135deg, #ff85d2, #ff4ea2);
+}
+
 
     /* Love Message Styling */
     .love-message {
